--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               
         }}
       </script>
-    <title>Casino Vegas</title>
+    <title>Casino GyC</title>
     <link rel="shortcut icon" href="/Assets/logo-vegas.webp" type="image/x-icon">
 </head>
 <body class="bg-fondo bg-cover bg-center flex justify-center items-center h-screen w-screen">
